(fix) IE fixes on cards; select arrow removed on IE

--- a/src/assets/css/organisms/card/_card-mission.scss
+++ b/src/assets/css/organisms/card/_card-mission.scss
@@ -5,6 +5,7 @@
     background: $darker-grey;
     color: $white;
     box-shadow: 2px 2px 8px $light-grey;
+    display: block;
 
     .content-container {
       .showcase-card-footer {
